<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">呼朋引伴</string>

    <!-- activity title strings -->
    <string name="title_activity_list">活动列表</string>

    <!-- global menu strings -->
    <string name="action_settings">设置</string>
    <string name="menu_activity_add">创建活动</string>
    <string name="menu_activity_add_frommap">从地图上选择地点</string>
    <string name="menu_activity_add_fromtext">直接输入活动信息</string>
    <string name="menu_activity_search">搜索活动</string>
    <string name="menu_activity_list">查看活动</string>
    <string name="menu_message">我的消息</string>
    <string name="menu_exit">退出</string>

    <string-array name="act_types">
        <item>运动</item>
        <item>学习</item>
        <item>娱乐</item>
        <item>聚餐</item>
        <item>其他</item>
    </string-array>

</resources>
